Modifications pour java 8